--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -1,12 +1,72 @@
-#window {
-    background: repeat;
-    background-color: aqua;
+html{
+    height: calc(100% - 8px);
+}
+body {
+    margin: 0px;
+    height: 100%;
+    background-color: #3e3f49;
+}
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+    color: #b5b5b7  ;
+}
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
+    background-color: #f2b632;
+    color:   white;
+}
+
+.mdl-layout__drawer {
+    background-color: #252839;
+    color: #b5b5b7;
+    border-right: none;
+}
+
+.mdl-navigation__link {
+    color: white;
+}
+
+#container {
+    background-color: #ff1cb1;
+    height: 100%;
+    border-bottom: none;
+    border: 4px solid black;
+
+}
+
+.taskbar {
+    height: 100%;
+    float: left;
+    border-right: 4px solid black;
+}
+
+#notes_list {
+    list-style: none;
+    font-family: 'Merriweather', serif;
+    font-size: 40px;
+    padding-left: 0px;
+}
+
+ul#notes_list li{
+    text-align: center;
+    padding-bottom: 10%;
+}
+
+#add {
+    font-size: 100px;
+    margin: 1%;
+    float: right;
 }
 
 #content {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 5%;
-    margin-top: 5%;
-    background-color: #ff1cb1;
+    background-color: #ff2052;
+    float: right;
+    height: 100%;
+    /*width: calc(80% - 4px);*/
+
+}
+
+#account_choice {
+    margin: 90%;
+    background-color: cornflowerblue;
 }
