--- a/app/views/notes.erb
+++ b/app/views/notes.erb
@@ -1,22 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="stylesheet.css">
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-
-  <div id="window">
-    <div id="containeri">
-      <div id="taskbar">
-        Panes Grillmeister
-      </div>
-      <div id="content">
-
-      </div>
-    </div>
-  </div>
-
-</body>
-</html>
+<button class="mdl-button mdl-js-button mdl-button--raised">
+  Button
+</button>
