Mer på taskbar designen
Lekte runt med googles design och ändrade lite i designen. Sedan
bestämde jag mig för att ändra på titel-buttonen. Genom att ändra så att
när man klickar på den så blir det googles knapp funktion, för att få
lite mer känsla i appen och för att bara inte fuska av google. Hat
samlat på mig idér för morgondagen.

--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -4,7 +4,11 @@ html{
 body {
     margin: 0px;
     height: 100%;
-    background-color: #3e3f49;
+    background-color: #c9c9c9;
+}
+
+.mdl-navigation__link {
+    color: white;
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
@@ -22,8 +26,11 @@ body {
     border-right: none;
 }
 
-.mdl-navigation__link {
+.mdl-layout__title, .mdl-layout-title {
+    background-color: #f2b632;
     color: white;
+    text-decoration: none;
+    material.indigo-pink.min.css:8
 }
 
 #container {
