--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,13 +6,15 @@
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>ToDo</title>
 </head>
 <body>
 
+
+
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
+    <a class="mdl-layout-title" href="">User</a>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Notis</a>
       <a class="mdl-navigation__link" href="">Link</a>
@@ -21,12 +23,15 @@
     </nav>
   </div>
 
+
+
   <main class="mdl-layout__content">
     <div class="page-content">
       <%= yield %>
     </div>
   </main>
 </div>
+
 
 </body>
 </html>
