--- a/app/views/notes.erb
+++ b/app/views/notes.erb
@@ -1,3 +1,3 @@
-<button class="mdl-button mdl-js-button mdl-button--raised">
+<a href="logorsign.erb"><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
   Button
-</button>
+</button></a>
