Taskbar nästan klar
Jag gjorde så att texten "user" fick en animation längst upp. Jag gjorde
detta så att min design skulle se lite olika än alla andras google
design.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,11 +14,11 @@
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <div class="mdl-layout__drawer">
-    <a class="mdl-layout-title" href="">User</a>
+    <a class="mdl-layout-title" href=""><span class="ripple"></span><span class="ripple-position">User</span></a>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Notis</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Invites</a>
+      <a class="mdl-navigation__link" href="">Contact</a>
       <a class="mdl-navigation__link" href="">Link</a>
     </nav>
   </div>
