--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -4,7 +4,74 @@ html{
 body {
     margin: 0px;
     height: 100%;
-    background-color: #c9c9c9;
+    background-color: white;
+}
+
+
+.ripple,.ripple:before,.ripple:after {
+    border-radius:2px;
+    width:2px;
+    height:2px;
+    -webkit-animation:rip 6s infinite;
+    -moz-animation:rip 6s infinite;
+}
+.ripple {
+    position: absolute;
+    z-index: -1;
+    top: 40px;
+    left: 15px}
+.ripple:before,.ripple:after {
+    content:'';
+    position: absolute;
+}
+.ripple:before {-webkit-animation-delay:.2s;-moz-animation-delay:.2s;top:5px;left:25px;}
+.ripple:after {-webkit-animation-delay:.5s;-moz-animation-delay:.8s;top:25px;left:0;}
+@-webkit-keyframes rip
+{
+    0%  {
+        box-shadow:0 0 0 0 transparent,
+        0 0 0 0 transparent,
+        0 0 0 0 transparent,
+        0 0 0 0 transparent;
+    }
+    5%  {
+        box-shadow:0 0 0 0 #f2b632,
+        0 0 0 0 rgba(255,255,255,0.4),
+        0 0 0 0 #f2b632,
+        0 0 0 0 rgba(0,0,0,0.08);
+    }
+    100% {
+        box-shadow:0 0 40px 200px #f2b632,
+        0 0 10px 210px transparent,
+        0 0 30px 220px  #f2b632,
+        0 0 5px 230px transparent;
+    }
+}
+@-moz-keyframes rip
+{
+    0%  {
+        box-shadow:0 0 0 0 transparent,
+        0 0 0 0 transparent,
+        0 0 0 0 transparent,
+        0 0 0 0 transparent;
+    }
+    5%  {
+        box-shadow:0 0 0 0 #f2b632,
+        0 0 0 0 rgba(255,255,255,0.4),
+        0 0 0 0 #f2b632,
+        0 0 0 0 rgba(0,0,0,0.08);
+    }
+    100% {
+        box-shadow:0 0 40px 200px #f2b632,
+        0 0 10px 210px transparent,
+        0 0 30px 220px #f2b632,
+        0 0 5px 230px transparent;
+    }
+}
+
+
+.mdl-navigation{
+    margin-top: 70px;
 }
 
 .mdl-navigation__link {
@@ -12,12 +79,13 @@ body {
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
-    color: #b5b5b7  ;
+    color: #b5b5b7;
+    font-size: 18px;
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
     background-color: #f2b632;
-    color:   white;
+    color: white;
 }
 
 .mdl-layout__drawer {
@@ -27,10 +95,16 @@ body {
 }
 
 .mdl-layout__title, .mdl-layout-title {
+    overflow: hidden;
     background-color: #f2b632;
     color: white;
     text-decoration: none;
-    material.indigo-pink.min.css:8
+    position: fixed;
+}
+
+.mdl-layout-title {
+    display: block;
+    width: 100%;
 }
 
 #container {
