--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <link rel="stylesheet" href="/css/stylesheet.css">
   <meta charset="UTF-8">
@@ -13,7 +14,7 @@
 
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
-  <div class="mdl-layout__drawer">
+  <div class="mdl-layout__drawer mdl-shadow--8dp">
     <a class="mdl-layout-title" href=""><span class="ripple"></span><span class="ripple-position">User</span></a>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Notis</a>
