--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,9 +19,13 @@
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Notis</a>
       <a class="mdl-navigation__link" href="">Invites</a>
-      <a class="mdl-navigation__link" href="">Contact</a>
+      <a class="mdl-navigation__link" href="/contacts">Contact</a>
       <a class="mdl-navigation__link" href="">Link</a>
     </nav>
+    <div id="unicorn_stable">
+      <img class="small_unicorn" src="/img/small_unicorn.png">
+      <h1>UnicornPixels</h1>
+    </div>
   </div>
 
 
