--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -121,20 +121,6 @@ body {
     width: 100%;
 }
 
-#container {
-    background-color: #ff1cb1;
-    height: 100%;
-    border-bottom: none;
-    border: 4px solid black;
-
-}
-
-.taskbar {
-    height: 100%;
-    float: left;
-    border-right: 4px solid black;
-}
-
 #notes_list {
     list-style: none;
     font-family: 'Merriweather', serif;
@@ -147,18 +133,25 @@ ul#notes_list li{
     padding-bottom: 10%;
 }
 
-#add {
-    font-size: 100px;
-    margin: 1%;
-    float: right;
+#unicorn_stable{
+    margin-top: auto;
+    margin-left: 4px;
+    margin-bottom: 4px;
 }
 
-#content {
-    background-color: #ff2052;
-    float: right;
-    height: 100%;
-    /*width: calc(80% - 4px);*/
+#unicorn_stable h1{
+    font-family: 'Lobster', cursive;
+    padding: 0;
+    font-size: 20px;
+    margin-bottom: 0;
+    margin-top: 15px !important;
+    margin-left: 40px !important;
+}
 
+.small_unicorn {
+    float: left;
+    display: block;
+    width: 30px;
 }
 
 #account_choice {
@@ -176,7 +169,6 @@ ul#notes_list li{
     text-align: center;
 
 }
-
 
 #contact_info h1 {
     font-family: 'Lobster', cursive;
