--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,10 +9,14 @@
   <meta charset="UTF-8">
   <title>ToDo</title>
 </head>
-<body>
+<body id="layout_body">
 
 
-
+<style>
+  body {
+    background-color: #464646;
+  }
+</style>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <div class="mdl-layout__drawer mdl-shadow--8dp">
     <a class="mdl-layout-title" href=""><span class="ripple"></span><span class="ripple-position">User</span></a>
@@ -20,7 +24,7 @@
       <a class="mdl-navigation__link" href="">Notis</a>
       <a class="mdl-navigation__link" href="">Invites</a>
       <a class="mdl-navigation__link" href="/contacts">Contact</a>
-      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="/welcome">Link</a>
     </nav>
     <div id="unicorn_stable">
       <img class="small_unicorn" src="/img/small_unicorn.png">
