--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -13,24 +13,22 @@
 <body>
 
 <div class="demo-card-wide mdl-card mdl-shadow--4dp">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Welcome</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    You have to have an account to use this application.
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="welcome_button" href="/login">
-      <button class="mdl-button mdl-js-button mdl-button--raised">
-        Login
-      </button>
-    </a>
-    <a class="welcome_button" href="/">
-      <button class="mdl-button mdl-js-button mdl-button--raised">
-        Sign Up
-      </button>
-    </a>
-  </div>
+  <div class="create_button">
+  <a href="/">
+    <button class="mdl-button mdl-js-button mdl-button--raised">
+      Create
+    </button>
+  </a>
+    </div>
+
+  <div class="back_button">
+  <a href="/welcome">
+    <button class="mdl-button mdl-js-button mdl-button--raised">
+      <i class="material-icons">arrow_back</i>
+    </button>
+  </a>
+    </div>
+
 </div>
 
 </body>
