Nästa steg webserver
Jag gjorde klart mer css, men nu känner jag att nästa steg är att göra
klart inloggning och sedan fortsätta med mer webserver.

--- a/app/views/contacts.erb
+++ b/app/views/contacts.erb
@@ -1,4 +1,5 @@
 <div id="contact_info">
-  <img src="img/unicorn.png">
   <h1>UnicornPixels</h1>
+  <p class="contact_text">Unicorn.Pixels@gmail.com</p>
+  <p class="contact_text">Tel:0760182737</p>
 </div>
