--- a/app/views/logorsign.erb
+++ b/app/views/logorsign.erb
@@ -12,20 +12,23 @@
 
 <body>
 
+<style>
+  body{
+    background-color: #eeedef;
+  }
+</style>
+
 <div class="demo-card-wide mdl-card mdl-shadow--4dp">
   <div class="mdl-card__title">
     <h2 class="mdl-card__title-text">Welcome</h2>
   </div>
-  <div class="mdl-card__supporting-text">
-    You have to have an account to use this application.
-  </div>
   <div class="mdl-card__actions mdl-card--border">
-    <a class="welcome_button" href="/login">
+    <a class="right_button" href="/login">
       <button class="mdl-button mdl-js-button mdl-button--raised">
         Login
       </button>
     </a>
-    <a class="welcome_button" href="/">
+    <a class="right_button" href="/sign-up">
       <button class="mdl-button mdl-js-button mdl-button--raised">
         Sign Up
       </button>
