--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -12,17 +12,17 @@
 
 <body>
 
-  <style>
-    body{
-      background-color: #eeedef;
-    }
-  </style>
+<style>
+  body{
+    background-color: #eeedef;
+  }
+</style>
 
 <div class="demo-card-wide mdl-card mdl-shadow--4dp">
   <div class="welcome_button">
     <a href="/">
       <button class="mdl-button mdl-js-button mdl-button--raised">
-        Login
+        Create
       </button>
     </a>
   </div>
