--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -9,11 +9,7 @@ body {
 .demo-card-wide.mdl-card {
     width: 512px;
 }
-.demo-card-wide > .mdl-card__title {
-    color: #fff;
-    height: 176px;
-    background: url('../assets/demos/welcome_card.jpg') center / cover;
-}
+
 .demo-card-wide > .mdl-card__menu {
     color: #fff;
 }
@@ -165,38 +161,72 @@ ul#notes_list li{
     margin: auto;
 }
 
-.demo-card-wide > .mdl-card__title{
+.demo-card-wide > .mdl-card__title {
+    color: #fff;
+    height: 176px;
     background-color: #252839;
 }
 
-.welcome_button{
-    float: right;
-    margin-left: 10px;
+.title_text{
+    font-size: 24px;
+    margin: 0;
+    width: 100%;
+}
+
+.summary_text{
+    font-size: 14px;
+    margin:0;
+    width: 100%
 }
 
 .back_button{
     float: left;
-    margin-top: auto;
     margin-bottom: 10px;
     margin-left: 10px;
+    width: 64px;
+    bottom: 0;
+    position: absolute;
 }
 
-.create_button{
+.right_button{
+    margin-left: auto;
+    margin-top: auto;
+    margin-right: 10px;
     float: right;
-    margin-left: 10px;
 }
 
-#contact_info image{
-    width: 30px;
+.welcome_button{
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-top: auto;
 }
 
 #contact_info{
-    width: 300px;
+    color: white;
+    position: relative;
+    top: 40%;
+    transform: translateY(-50%);
     margin: auto;
+    width: 50%;
     text-align: center;
+    margin-bottom: 25% !important;
+}
 
+.contact_text{
+    margin-bottom: 0px;
+}
+
+.mdl-layout__content{
+    height: 100%;
+}
+
+.page-content{
+    height: 100%;
 }
 
 #contact_info h1 {
     font-family: 'Lobster', cursive;
+    margin: 0;
 }
