--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
@@ -19,9 +20,9 @@
 </style>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <div class="mdl-layout__drawer mdl-shadow--8dp">
-    <a class="mdl-layout-title" href=""><span class="ripple"></span><span class="ripple-position">User</span></a>
+    <a class="mdl-layout-title" href="/user"><span class="ripple"></span><span class="ripple-position">User</span></a>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Notis</a>
+      <a class="mdl-navigation__link" href="/">Notis</a>
       <a class="mdl-navigation__link" href="">Invites</a>
       <a class="mdl-navigation__link" href="/contacts">Contact</a>
       <a class="mdl-navigation__link" href="/welcome">Link</a>
