--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -19,6 +19,17 @@
   </style>
 
 <div class="demo-card-wide mdl-card mdl-shadow--4dp">
+
+  <form action="/login" method="post">
+    <input class="" name="username" placeholder="Username" type="username">
+    <input class="" name="password" placeholder="Password" type="password">
+    <div class="welcome_button">
+        <button class="mdl-button mdl-js-button mdl-button--raised">
+          Login
+        </button>
+    </div>
+  </form>
+
   <div class="welcome_button">
     <a href="/">
       <button class="mdl-button mdl-js-button mdl-button--raised">
