--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -19,6 +19,19 @@
 </style>
 
 <div class="demo-card-wide mdl-card mdl-shadow--4dp">
+
+  <form action="/sign-up" method="post">
+    <input class="" name="username" placeholder="Username" type="username">
+    <input class="" name="password" placeholder="Password" type="password">
+    <input class="" name="password_repeat" placeholder="Repeat Password" type="password">
+    <input class="" name="email" placeholder="Email" type="email">
+    <div class="welcome_button">
+        <button class="mdl-button mdl-js-button mdl-button--raised">
+          Create
+        </button>
+    </div>
+  </form>
+
   <div class="welcome_button">
     <a href="/">
       <button class="mdl-button mdl-js-button mdl-button--raised">
