--- a/app/views/contacts.erb
+++ b/app/views/contacts.erb
@@ -1,4 +1,4 @@
-<div id="contact_info">
+<div class="div_center">
   <h1>UnicornPixels</h1>
   <p class="contact_text">Unicorn.Pixels@gmail.com</p>
   <p class="contact_text">Tel:0760182737</p>
