--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -40,8 +40,9 @@
     <input class="mdl-textfield__input" name="email" type="email">
       <label class="mdl-textfield__label" for="sample3">Email</label>
       </div>
+
     <div class="welcome_button">
-        <button class="mdl-button mdl-js-button mdl-button--raised">
+        <button type="submit" class="mdl-button mdl-js-button mdl-button--raised">
           Register
         </button>
     </div>
