--- a/app/views/notes.erb
+++ b/app/views/notes.erb
@@ -1,3 +1,14 @@
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+<div class="notes_container">
+  <% for note in @user.notes %>
+      <a href="/note/<%= note.id %>">
+      <div class="note_brick mdl-shadow--4dp">
+        <h1 class="note_titel"><%= note.titel %></h1>
+        <%= note.time_stamp %>
+      </div>
+      </a>
+  <% end %>
+</div>
+
+<a href="/create-notis"><button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect hover-color">
   <i class="material-icons">add</i>
-</button>
+</button></a>
