Design & Fortsatt utveckling
Jag har fortsatt att arbeta vidare med hur designen skall vara och hur
servern skall användas. Nu har jag dock bestämt mig för att ändra på en
hel del grejer för att hinna med allt. Därför valde jag att göra nya
mockups, för några nya grejor, sammtidigt som jag "tar bort" gamla.

--- a/app/views/notes.erb
+++ b/app/views/notes.erb
@@ -3,6 +3,7 @@
       <a href="/note/<%= note.id %>">
       <div class="note_brick mdl-shadow--4dp">
         <h1 class="note_titel"><%= note.titel %></h1>
+        <p class="note_description"><%= note.info %></p>
         <%= note.time_stamp %>
       </div>
       </a>
