--- a/app/views/share.erb
+++ b/app/views/share.erb
@@ -27,6 +27,7 @@
       </a>
     </div>
 
+    <form>
     <div class="add_user">
       <div class="mdl-textfield mdl-js-textfield create_titel">
         <input class="mdl-textfield__input" type="text" id="sample1">
@@ -37,8 +38,17 @@
         <i class="material-icons">add</i>
       </button>
 
+    </div>
+    </form>
 
 
+    <div>
+      <div>
+
+      </div>
+      <div>
+
+      </div>
     </div>
 
   </form>
