--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -363,11 +363,15 @@ ul#notes_list li{
 }
 
 .choose_button{
-
+    float: left;
+    position: absolute;
+    margin-left: 82px;
 }
 
 .add_user{
-    height: 68px;
+    height: 124px;
+    width: 220px;
+    display: inline-block;
 }
 
 .notes_container{
@@ -375,8 +379,8 @@ ul#notes_list li{
     width: 50%;
     max-width: 500px;
     height: auto;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 40%;
+    margin-right: 10%;
 }
 
 .note_brick{
@@ -390,8 +394,61 @@ ul#notes_list li{
     font-size: 35px;
     margin-top: 25px;
     margin-left: 25px;
+    margin-bottom: 10px;
 }
 
-.material-icons{
-    color: white;
+.note_description{
+    color: #eeedef;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.note_window{
+    background-color: #252839;
+    margin: 35px;
+    height: calc(100% - 70px);
+    width: calc(100% - 70px);
+    border-radius: 10px;
+}
+
+.share_with_someone{
+    width: calc(100% - 70px);
+    height: 150px;
+    background-color: #eeedef;
+    position: absolute;
+    bottom: 35px;
+    border-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.inside_note_information{
+    width: 80%;
+}
+
+.inside_note_title{
+    font-size: 46px;
+    color: #eeedef;
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+    width: 15px;
+}
+
+.inside_note_time{
+    color: #eeedef;
+    float: left;
+    margin-left: 15px;
+}
+
+.inside_note_textfield_container{
+    color: #eeedef;
+    margin-top: 40px;
+    margin-left: 15px;
+}
+
+.inside_note_textfield{
+    font-size: 16px;
+    width: 50%;
+    margin: 0;
 }
