--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -409,14 +409,15 @@ ul#notes_list li{
     height: calc(100% - 70px);
     width: calc(100% - 70px);
     border-radius: 10px;
+    position: absolute;
 }
 
 .share_with_someone{
-    width: calc(100% - 70px);
+    width: 100%;
     height: 150px;
     background-color: #eeedef;
     position: absolute;
-    bottom: 35px;
+    bottom: 0;
     border-radius: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -424,15 +425,18 @@ ul#notes_list li{
 
 .inside_note_information{
     width: 80%;
+    margin-top: 50px;
+     margin-left: 100px;
 }
 
 .inside_note_title{
     font-size: 46px;
     color: #eeedef;
-    margin-top: 10px;
-    margin-left: 15px;
+    margin-top: 2px;
     margin-bottom: 10px;
-    width: 15px;
+    width: 100%;
+    text-align: left;
+    margin-top: 0;
 }
 
 .inside_note_time{
@@ -451,4 +455,23 @@ ul#notes_list li{
     font-size: 16px;
     width: 50%;
     margin: 0;
+    margin-left: 15px;
+    color: #eeedef;
+}
+
+.note_delete_button{
+    margin-right: 15px !important;
+    margin-top: 15px !important;
+}
+
+.note_author_container{
+    color: #eeedef;
+    float: right;
+    margin-top: 0px;
+    margin-right: 35px;
+}
+
+.note_author{
+    font-size: 18px;
+    margin-top: 9px;
 }
