--- a/app/views/note.erb
+++ b/app/views/note.erb
@@ -1,4 +1,5 @@
 <div class="mdl-shadow--4dp note_window">
+
   <a href="/">
     <div class="back_button2">
       <button class="mdl-button mdl-js-button mdl-button--raised" type="button">
@@ -6,14 +7,27 @@
       </button>
     </div>
   </a>
-  <div class="inside_note_information">
-    <h1 class="inside_note_title"><%=@note.titel%></h1>
-    <div class="inside_note_time"><%=@note.time_stamp%></div>
+
+  <form action="/delete_note">
+    <div class="delete_button note_delete_button">
+      <button class="mdl-button mdl-js-button mdl-button--raised" type="button">
+        <i class="material-icons">delete</i>
+      </button>
+    </div>
+  </form>
+
+  <div class="note_author_container">
+    <h2 class="note_author"><%= @user.username %></h2>
   </div>
-  <div class="inside_note_textfield_container"><h1 class="inside_note_textfield"><%=@note.info%></h1></div>
 
 
+  <div class="inside_note_information">
+    <h1 class="inside_note_title"><%= @note.titel %></h1>
 
+    <div class="inside_note_time"><%= @note.time_stamp %></div>
+    </br></br>
+    <h1 class="inside_note_textfield"><%= @note.info %></h1>
+  </div>
 
 
   <div class="share_with_someone">
