--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -12,29 +12,10 @@
         </div>
       </a>
 
-        <div class="create_button">
-          <button class="mdl-button mdl-js-button mdl-button--raised" type="submit">
-            <i class="material-icons">check</i>
-          </button>
-        </div>
-
-        <div class="delete_button">
-          <button class="mdl-button mdl-js-button mdl-button--raised" type="button">
-            <i class="material-icons">delete</i>
-          </button>
-        </div>
-
-        <div class="share_button">
-          <button class="mdl-button mdl-js-button mdl-button--raised" type="button">
-            <i class="material-icons">share</i>
-          </button>
-        </div>
-
-      <div class="switch">
-        <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-2">
-          <input type="checkbox" id="switch-2" class="mdl-switch__input">
-          <span class="mdl-switch__label"></span>
-        </label>
+      <div class="create_button">
+        <button class="mdl-button mdl-js-button mdl-button--raised" type="submit">
+          <i class="material-icons">check</i>
+        </button>
       </div>
     </div>
 
@@ -43,14 +24,15 @@
       <label class="mdl-textfield__label" for="sample1">Titel</label>
     </div>
 
-      <div class="mdl-textfield mdl-js-textfield create_textfield">
-        <textarea class="mdl-textfield__input" type="text" name="information" rows= "5" id="sample5" ></textarea>
-        <label class="mdl-textfield__label" for="sample5">Information</label>
-      </div>
+    <div class="mdl-textfield mdl-js-textfield create_textfield">
+      <textarea class="mdl-textfield__input" type="text" name="information" rows="5" id="sample5"></textarea>
+      <label class="mdl-textfield__label" for="sample5">Information</label>
+    </div>
 
     <div class="choose_occurrence">
-      <label for="sample2">Time</label>
+      <label for="sample2"> Time</label>
       <input type="datetime" name="time" id="sample1">
+      <h1 class="example">Year-Month-Day-Hour:Minute</h1>
     </div>
 
   </form>
