--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
   <div class="mdl-layout__drawer mdl-shadow--8dp">
     <a class="mdl-layout-title" href="/user"><span class="ripple"></span><span class="ripple-position"><%= @user.username %></span></a>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="/">Notis</a>
+      <a class="mdl-navigation__link" href="/">Notes</a>
       <a class="mdl-navigation__link" href="/invites">Invites</a>
       <a class="mdl-navigation__link" href="/contacts">Contact</a>
     </nav>
