--- a/app/views/notes.erb
+++ b/app/views/notes.erb
@@ -4,7 +4,7 @@
       <div class="note_brick mdl-shadow--4dp">
         <h1 class="note_titel"><%= note.titel %></h1>
         <p class="note_description"><%= note.info %></p>
-        <%= note.time_stamp %>
+        <h1 class="note_time"><%= note.time_stamp %></h1>
       </div>
       </a>
   <% end %>
