--- a/app/views/user.erb
+++ b/app/views/user.erb
@@ -5,5 +5,5 @@
 </form>
 
 <div class="div_center">
-    <h2><%=@user.username%></h2>
+    <h2 class="user_username"><%=@user.username%></h2>
 </div>
